# Cordato

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  build.gradle.kts  compose.yml  gradle.properties  pyproject.toml  request.http  settings.gradle.kts
.claude/commands/: arch-review.md
.claude/commands/opsx/: explore.md
.claude/commands/trocado/: endpoint.md  feature.md  guard.md  stress.md
.claude/skills/architecture-guard/: SKILL.md
.claude/skills/feature-layers/: SKILL.md
.claude/skills/feature-scaffold/: SKILL.md
.claude/skills/feature-tests/: SKILL.md
.claude/skills/http-slice/: SKILL.md
.claude/skills/load-test/: SKILL.md
.claude/skills/openspec-archive-change/: SKILL.md
.claude/skills/openspec-explore/: SKILL.md
.claude/skills/web-endpoint/: SKILL.md
.claude/skills/writing-tests/: SKILL.md
alembic/: env.py
bruno/: bruno.json  collection.bru
bruno/authentication/: Sign In.bru  Sign Out.bru  Sign Up.bru
bruno/budgets/: Create Budget.bru  Get Active Budget.bru  Get Default Budget.bru
bruno/environments/: Local.bru
bruno/expenses/: Create Expense.bru  List Expenses.bru
bruno/persons/: Me.bru  Update Email.bru  Update Name.bru  Update Password.bru
docs/architecture/decisions/: 0001-virtual-objects.md  0002-domain-errors-as-sealed-types.md  0003-port-outcomes.md  0004-money-representation.md  0005-auth-opaque-token.md  0006-dependency-injection.md  0007-http-driving-adapters-exception.md  0008-http-error-contract.md  0009-i18n-message-resolution.md  0010-openapi-generation.md  0011-api-versioning.md  0012-edge-authentication.md  0013-cross-context-communication.md  0014-http-response-envelope.md  0015-http-rate-limiting.md  README.md
gradle/wrapper/: gradle-wrapper.properties
http/: authentication.http  budgets.http  expenses.http
openspec/changes/add-identity-http-signup/: design.md  proposal.md
openspec/changes/adopt-json-api-response-envelope/: proposal.md  tasks.md
openspec/changes/list-own-expenses/: design.md  proposal.md  tasks.md
openspec/changes/replace-auth-binder-with-filter-guard/: design.md  proposal.md  tasks.md
openspec/changes/revoke-invite-code/: design.md  tasks.md
openspec/changes/web-create-budget/: design.md  proposal.md  tasks.md
openspec/specs/accept-invite-code/: spec.md
openspec/specs/active-budget/: spec.md
openspec/specs/api-versioning/: spec.md
openspec/specs/application-layer-structure/: spec.md
openspec/specs/audit-budgets/: spec.md
openspec/specs/audit-expenses/: spec.md
openspec/specs/authentication-http-edge/: spec.md
openspec/specs/budget-active-view/: spec.md
openspec/specs/budget-create/: spec.md
openspec/specs/budget-default-view/: spec.md
openspec/specs/budget-delete/: spec.md
openspec/specs/budget-http-api/: spec.md
openspec/specs/budget-persistence/: spec.md
openspec/specs/budget-update/: spec.md
openspec/specs/cache-valkey/: spec.md
openspec/specs/change-password/: spec.md
openspec/specs/core-determinism/: spec.md
openspec/specs/couple-budget/: spec.md
openspec/specs/couple-expenses/: spec.md
openspec/specs/create-budget/: spec.md
openspec/specs/create-invite-code/: spec.md
openspec/specs/current-pair/: spec.md
openspec/specs/default-budget/: spec.md
openspec/specs/delete-account/: spec.md
openspec/specs/delete-budget/: spec.md
src/trocado/: README.md  __main__.py
tests/: test_smoke.py
tests/stress/: test_budgeting_flow.py  test_budgets_flow.py  test_expenses_flow.py  test_pairing_flow.py
(+1125 files in other folders)
